(fix) fix header spacing, introducing height (mobile, tablet, desktop)

--- a/src/components/00-atoms/01-links/LinkText/index.module.css
+++ b/src/components/00-atoms/01-links/LinkText/index.module.css
@@ -3,7 +3,7 @@
     font-size: 14px;
     line-height: 18px;
 
-    padding: 12px 35px;
+    padding: 12px 5px;
     color: var(--color-font-additional);
 }
 
