--- a/src/components/01-molecules/01-screens/Header/index.module.css
+++ b/src/components/01-molecules/01-screens/Header/index.module.css
@@ -17,7 +17,14 @@
     width: 100%;
 }
 
-@media screen and (max-width: 1023px) {
+
+@media screen and (max-width: 1023px) { 
+    .header {
+        padding: 0 4%;
+    }
+}
+
+@media screen and (max-width: 767px) {
     .header {
         display: none;
     }
