--- a/src/components/01-molecules/01-screens/Introduction/index.module.css
+++ b/src/components/01-molecules/01-screens/Introduction/index.module.css
@@ -1,5 +1,5 @@
 .screen {
-    min-height: calc(100vh - 70px);
+    /* min-height: calc(100vh - 70px); */
     /* height: 100vh; */
     max-width: 920px;
     width: 100%;
@@ -8,6 +8,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    gap: 20px   ;
 }
 
 .content {
@@ -24,6 +25,15 @@
 
 .header {
     margin-bottom: 30px;
+    max-width: 85%;
+}
+
+.header >div:first-child {
+    padding-bottom: 10px;
+}
+
+.header >div:last-child {
+    text-align: justify;
 }
 
 .greetings {
@@ -68,6 +78,7 @@
     }
     .header {
         text-align: center;
+        max-width: initial;
     }
     .user-image {
         height: 100%;
@@ -77,5 +88,11 @@
     }
     .button {
         width: 100%;
+    }
+}
+
+@media screen and (orientation:landscape) {
+    .screen {
+        min-height: calc(100vh - 70px);
     }
 }
