--- a/src/components/01-molecules/05-bars/NavHeader/index.module.css
+++ b/src/components/01-molecules/05-bars/NavHeader/index.module.css
@@ -1,4 +1,5 @@
 .nav {
     padding-bottom: 4px;
     display: flex;
+    gap: 30px;
 }
